--- a/index.html
+++ b/index.html
@@ -9,14 +9,14 @@
 </head>
 <body>
     <header>
-        <a href="#home" class="logo">Humphrey</a>
+        <a href="https://sites.google.com/view/humstew/home" class="logo">Humphrey</a>
 
         <nav>
-            <a href="#home">Home</a>
-            <a href="#aboutMe">About Me</a>
-            <a href="#education">Education</a>
-            <a href="#philosophy">Philosophy</a>
-            <a href="#contact">Contact</a>
+            <a href="https://sites.google.com/view/humstew/home">Home</a>
+            <a href="https://sites.google.com/view/humstew/home/about-me">About Me</a>
+            <a href="https://sites.google.com/view/humstew/home/projects">Projects</a>
+            <a href="https://sites.google.com/view/humstew/home/blog">Blog</a>
+            <a href="https://sites.google.com/view/humstew/home/contact">Contact</a>
         </nav>
     </header>
 
@@ -34,7 +34,7 @@
                 <a href="https://github.com/Zeeb0-0/" target="_blank"><i class="fa-brands fa-github"></i></a>
                 <a href="https://www.instagram.com/humstew/" target="_blank"><i class="fa-brands fa-instagram"></i></a>
             </div>
-            <a href="#aboutMe" class="btn">Learn More</a>
+            <a href="https://sites.google.com/view/humstew/home/about-me" class="btn">Learn More</a>
         </div>
     </section>
 
